{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 39,
  "lineage": "1a6285df-eef9-bfbb-4c64-a592fa1f4cd8",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:338834334632:vpc/vpc-07af7af38af30c1c7",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-05f3a97f6e26dc1b4",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0120143b35dbba31d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-07af7af38af30c1c7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f1eea5eb95af1202",
            "owner_id": "338834334632",
            "state": "available",
            "tags": {
              "Name": "ecs_provisioning",
              "createdBy": "Samir Merdoud",
              "env": "dev"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:338834334632:targetgroup/target-group/03e46f0642dec412",
            "arn_suffix": "targetgroup/target-group/03e46f0642dec412",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 300,
                "matcher": "200,301,302",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 60,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:338834334632:targetgroup/target-group/03e46f0642dec412",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "target-group",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07af7af38af30c1c7"
          },
          "dependencies": [
            "data.aws_vpc.main",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2-securegrp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:338834334632:security-group/sg-05b15ac31224fb82e",
            "description": "allow all",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05b15ac31224fb82e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow-all-ec2",
            "name_prefix": null,
            "owner_id": "338834334632",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EC2SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-07af7af38af30c1c7"
          },
          "dependencies": [
            "data.aws_vpc.main",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:338834334632:security-group/sg-0f48aabc1e14cc656",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f48aabc1e14cc656",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow-all-lb",
            "name_prefix": null,
            "owner_id": "338834334632",
            "revoke_rules_on_delete": false,
            "tags": {
              "createdBy": "Samir Merdoud",
              "env": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-07af7af38af30c1c7"
          },
          "dependencies": [
            "data.aws_vpc.main",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:338834334632:internet-gateway/igw-02f9748008d0e70ac",
            "id": "igw-02f9748008d0e70ac",
            "owner_id": "338834334632",
            "tags": {
              "Name": "ecs_provisioning",
              "createdBy": "Samir Merdoud",
              "env": "dev"
            },
            "vpc_id": "vpc-07af7af38af30c1c7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02f9748008d0e70ac",
            "id": "r-rtb-0a1c21b4b80588b711080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a1c21b4b80588b71",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a1c21b4b80588b71",
            "owner_id": "338834334632",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02f9748008d0e70ac",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ecs_provisioning-public",
              "createdBy": "Samir Merdoud",
              "env": "dev"
            },
            "vpc_id": "vpc-07af7af38af30c1c7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:338834334632:subnet/subnet-0f6a4751acc2a7f2e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0f6a4751acc2a7f2e",
            "map_public_ip_on_launch": true,
            "owner_id": "338834334632",
            "tags": {
              "Name": "ecs_provisioning-public-ca-central-1a",
              "createdBy": "Samir Merdoud",
              "env": "dev"
            },
            "vpc_id": "vpc-07af7af38af30c1c7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:338834334632:subnet/subnet-0f11b832ce4e02aab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0f11b832ce4e02aab",
            "map_public_ip_on_launch": true,
            "owner_id": "338834334632",
            "tags": {
              "Name": "ecs_provisioning-public-ca-central-1b",
              "createdBy": "Samir Merdoud",
              "env": "dev"
            },
            "vpc_id": "vpc-07af7af38af30c1c7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:338834334632:vpc/vpc-07af7af38af30c1c7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03c08ff66417c4b7d",
            "default_route_table_id": "rtb-0f1eea5eb95af1202",
            "default_security_group_id": "sg-0a2dc878c3c806f78",
            "dhcp_options_id": "dopt-0120143b35dbba31d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-07af7af38af30c1c7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f1eea5eb95af1202",
            "owner_id": "338834334632",
            "tags": {
              "Name": "ecs_provisioning",
              "createdBy": "Samir Merdoud",
              "env": "dev"
            }
          }
        }
      ]
    }
  ]
}